--- a/curriculum.html
+++ b/curriculum.html
@@ -57,6 +57,7 @@
                         <li>HTML y CSS - Clases, Posicionamiento y Flexbox. - Alura Cursos. <a href="https://app.aluracursos.com/certificate/jomartheyn/html-css-clases-posicionamiento-flexbox">certificación</a></li>
                         <li>HTML y CSS - Header, Footer y variables CSS. - Alura Cursos. <a href="https://app.aluracursos.com/certificate/jomartheyn/html-css-header-footer-variables-css">certificación</a></li>
                         <li>HTML y CSS - Responsividad y publicación de proyectos. - Alura Cursos. <a href="https://app.aluracursos.com/certificate/jomartheyn/html-css-trabajando-responsividad-publicacion-proyectos">certificación</a></li>
+                        <li>HTML y CSS - Proyecto Encriptador de Texto. - Alura Cursos. <a href="https://app.aluracursos.com/certificate/b6bf5203-39fb-4b4b-a022-8a25f203154d">certificación</a></li>
                         <li>Git y GitHub - Repositorio, commit y versiones. - Alura Cursos. <a href="https://app.aluracursos.com/certificate/jomartheyn/git-github-repositorio-commit-versiones">certificación</a></li>
                         <li>Análisis de Datos - Aspectos básicos: Datos en todas partes. - Coursera. <a href="https://www.coursera.org/account/accomplishments/verify/TSFSQ8QZSHUJ">certificación</a></li>
                         <li>Análisis de Datos - Ask Questions to Make Data-Driven Decisions. - Coursera. <a href="https://www.coursera.org/account/accomplishments/verify/TUNLC4SRGT6B">certificación</a></li>
